Adjust lerm controls css to prevent collapse when only a floating button is in the container

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -442,8 +442,9 @@ footer.main-footer {
 }
 
 .lerm-step-controls {
-  margin: 20px 0 0;
-  padding: 20px 0 0;
+  min-height: 55px;
+  margin-top: 20px;
+  padding-top: 20px;
   border-top: 1px solid $border-color;
 
   .next-step-btn {
